--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>Git</h4>
+                  <h4>Firebase</h4>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -237,7 +237,7 @@
                   class="icon"
                 />
                 <div>
-                  <h4>VS Code</h4>
+                  <h4>Git</h4>
                   <p>Intermediate</p>
                 </div>
               </article>
